--- a/src/components/calendar/style/style.css
+++ b/src/components/calendar/style/style.css
@@ -1,20 +1,35 @@
+
+/* 켈린더 전체적인 틀 */
 .react-calendar { 
-    width: 400px;
+    width: 900px;
+    height: 900px;
     max-width: 100%;
     background-color: #fff;
     color: #222;
-    border-radius: 8px;
+    border-radius: 10px;
     box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.125em;
    }
+/*년도, 월, 네비버튼*/
+    .react-calendar__navigation{
+    
+        height: 50px;
+        border-radius: 20px 20px 0 0;
+       
+
+        span {
+            color: #6f48eb;
+        }
+
+    }
    .react-calendar__navigation button {
-    color: #6f48eb;
     min-width: 44px;
     background: none;
     font-size: 16px;
     margin-top: 8px;
    }
+   /* 네비버튼 클릭 배경 */
    .react-calendar__navigation button:enabled:hover,
    .react-calendar__navigation button:enabled:focus {
     background-color: #f8f8fa;
@@ -23,17 +38,30 @@
     background-color: #f0f0f0;
    }
    abbr[title] {
-    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
    }
    /* .react-calendar__month-view__days__day--weekend {
     color: #d10000;
    } */
+
+   .react-calendar__tile {
+    text-align: center;
+    height: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+   /* 선택 날짜 타일 */
    .react-calendar__tile:enabled:hover,
    .react-calendar__tile:enabled:focus {
     background: #f8f8fa;
     color: #6f48eb;
     border-radius: 6px;
    }
+   /* 지금 날짜 타일 */
    .react-calendar__tile--now {
     background: #6f48eb33;
     border-radius: 6px;
@@ -65,7 +93,10 @@
    .react-calendar--selectRange .react-calendar__tile--hover {
     background-color: #f8f8fa;
    }
-   .react-calendar__tile--range {
+
+
+
+   /* .react-calendar__tile--range {
     background: #f8f8fa;
     color: #6f48eb;
     border-radius: 0;
@@ -85,4 +116,4 @@
     border-bottom-right-radius: 6px;
     background: #6f48eb;
     color: white;
-   }
+   } */
