--- a/src/components/calendar/style/style.css
+++ b/src/components/calendar/style/style.css
@@ -1,6 +1,7 @@
 
 /* 켈린더 전체적인 틀 */
 .react-calendar { 
+
     width: 900px;
     height: 900px;
     max-width: 100%;
@@ -94,26 +95,7 @@
     background-color: #f8f8fa;
    }
 
-
-
-   /* .react-calendar__tile--range {
-    background: #f8f8fa;
-    color: #6f48eb;
-    border-radius: 0;
-   }
-   .react-calendar__tile--rangeStart {
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    border-top-left-radius: 6px;
-    border-bottom-left-radius: 6px;
-    background: #6f48eb;
-    color: white;
-   }
-   .react-calendar__tile--rangeEnd {
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    border-top-right-radius: 6px;
-    border-bottom-right-radius: 6px;
-    background: #6f48eb;
-    color: white;
-   } */
+   .custom-overlay {
+    background-color: rgba(0, 0, 0, 0.5); /* 배경 색상과 투명도 조절 */
+    
+  }
